<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/standUpFragment">
    <fragment
        android:id="@+id/savedFragment"
        android:name="com.seytkalievm.angimehubnative.ui.main.saved.SavedFragment"
        android:label="@string/saved_recordings"
        tools:layout="@layout/fragment_saved" />
    <fragment
        android:id="@+id/podcastsFragment"
        android:name="com.seytkalievm.angimehubnative.ui.main.podcast.PodcastsFragment"
        android:label="@string/podcasts"
        tools:layout="@layout/fragment_podcasts" >
        <action
            android:id="@+id/action_podcastsFragment_to_artistPageFragment"
            app:destination="@id/artistPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/standUpFragment"
        android:name="com.seytkalievm.angimehubnative.ui.main.standup.StandUpFragment"
        android:label="@string/stand_up_shows"
        tools:layout="@layout/fragment_stand_up" >
        <action
            android:id="@+id/action_standUpFragment_to_artistPageFragment"
            app:destination="@id/artistPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.seytkalievm.angimehubnative.ui.main.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/artistPageFragment"
        android:name="com.seytkalievm.angimehubnative.ui.main.artistpage.ArtistPageFragment"
        android:label="fragment_artist_page"
        tools:layout="@layout/fragment_artist_page" >
        <argument
            android:name="artist_id"
            app:argType="integer" />
    </fragment>
</navigation>