<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue">

    <data>
        <variable
            name="show"
            type="com.seytkalievm.angimehubnative.models.ShowPreview" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="85dp"
            android:layout_height="60dp"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/preview_photo_iv"
                imageUrl="@{show.imageUrl}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/show_preview" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="top|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preview_show_name_tv"
                style="@style/RegularText"
                android:gravity="start"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@{show.name}"
                tools:text="@string/show_name"/>

            <TextView
                android:id="@+id/preview_show_artist_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@{show.artistName()}"
                tools:text="@string/artist_name"
                android:textColor="@color/light_blue_40"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageButton
            android:layout_margin="8dp"
            android:id="@+id/preview_add_to_favourite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:tint="@color/light_blue_40"
            android:contentDescription="@string/save_to_favourites"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_outline_favorite_border_24"/>

    </LinearLayout>

</layout>