<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.session.artistpage.ArtistPageFragment">

    <data>
        <variable
            name="artist"
            type="com.seytkalievm.angimehubnative.models.Artist" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:layout_margin="8dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_marginTop="24dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    imageUrl="@{artist.profileImage}"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/artist_profile_pic" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HeaderText"
                android:text="@{artist.getName()}"
                tools:text="@string/artist_name"/>


            <LinearLayout
                android:id="@+id/artist_profile_fragment_stand_ups_bar"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_stand_ups" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all"
                    android:focusable="true"
                    android:clickable="true"
                    android:textAlignment="viewEnd" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artist_profile_fragment_stand_ups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="3"
                tools:listitem="@layout/show_preview"/>

            <LinearLayout
                android:id="@+id/artist_profile_fragment_podcasts_bar"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_podcasts" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_all"
                    android:focusable="true"
                    android:clickable="true"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/artist_profile_fragment_podcasts_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="3"
                tools:listitem="@layout/show_preview"/>

        </LinearLayout>

    </ScrollView>

</layout>