<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.podcast.PodcastsFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInput"
        android:layout_margin="8dp"
        android:id="@+id/fragment_podcasts_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        app:startIconCheckable="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_podcasts_search_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/artists_or_shows"
            android:textColorHint="#90A4AE"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/fragment_podcasts_artists_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_podcasts_search_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/grey"
            android:text="@string/popular_artists" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_podcasts_artist_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/artist_card"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_podcasts_shows_layout"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_podcasts_artists_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/grey"
            android:text="@string/popular_podcasts"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/show_preview" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>